# MarkiNote

./: .gitignore  AGENTS.md  MarkiNote.spec  PACKAGING.md  README.md  README_EN.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  config.py  runtime.py
app/routes/: __init__.py  ai_routes.py  library_routes.py  main_routes.py  pdf_routes.py  word_routes.py
app/utils/: ai_backup.py  ai_provider.py  ai_tools.py  markdown_utils.py  pdf_utils.py  word_utils.py
lib/: AI助手能力说明.md
scripts/: build_exe.py  build_windows.ps1
static/: ai-chat.css  ai-chat.js  i18n.js  script.js  selection-state.js  style.css
templates/: index.html
tests/: test_cli_browser_options.py  test_markdown_utils.py  test_pdf_batch_separate.py  test_pdf_toc.py  test_selection_state.js  test_word_export.py
