[project]
name = "markinote"
version = "0.1.0"
description = "AI Agent powered Markdown document management and reading system"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Flask==3.0.0",
    "Werkzeug==3.0.1",
    "markdown==3.5.1",
    "beautifulsoup4==4.12.2",
    "lxml==4.9.3",
    "Pygments==2.17.2",
    "requests>=2.31.0",
    "duckduckgo-search>=6.0.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.6",
]

[tool.uv]
package = false
